--- a/package.json
+++ b/package.json
@@ -19,8 +19,15 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "apollo-boost": "^0.1.6",
+    "apollo-cache-inmemory": "^1.2.1",
+    "apollo-link-ws": "^1.0.8",
     "expo": "^27.0.1",
+    "graphql": "^0.13.2",
+    "graphql-tag": "^2.9.2",
     "react": "16.3.1",
-    "react-native": "~0.55.2"
+    "react-apollo": "^2.1.4",
+    "react-native": "~0.55.2",
+    "subscriptions-transport-ws": "^0.9.9"
   }
 }
